# BinaryOptionsTools

./: .gitignore  LICENSE  README.md  binary_options_model.pth  binary_options_model2.pth  binary_options_model_retrained.pth  getdatatest.py  history-AUDJPY_otc.csv  history-AUDNZD_otc.csv  history-EURUSD_otc.csv  requirements.txt  setup.cfg  setup.py  test.py  test1.ipynb  test2.ipynb  test2.py  trend.pth
BinaryOptionsTools/: __init__.py
BinaryOptionsTools/bot/: base.py
BinaryOptionsTools/bot/signals/: __init__.py
BinaryOptionsTools/indicators/: momentum.py  trend.py
BinaryOptionsTools/research/tests/: test_csv1__wdwd_.csv
BinaryOptionstools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: BinaryOptionstools.indicators.rst  BinaryOptionstools.platforms.pocketoption.backend.rst  BinaryOptionstools.platforms.pocketoption.backend.ws.chat.rst  BinaryOptionstools.platforms.pocketoption.rst  BinaryOptionstools.platforms.pocketoption.test.rst  BinaryOptionstools.rst
examples/: .env  minimal.py  sma-crossoverbot.py  telegam-bot.py
examples/telegram_bot/: .env  server.py  telegram-bot.py
source/: BinaryOptionstools.bot.rst  BinaryOptionstools.platforms.pocketoption.backend.ws.rst  conf.py  index.rst  modules.rst
tools/: pocketoption-debugger.js
