[metadata]
name = BinaryOptionsTools
version = 1.0.0
author = Vigo Walker
author_email = vigopaul05@gmail.com
description = BinaryOptionsTools is a powerful suite of tools designed to enhance your binary options trading experience. Whether you're looking for analysis, strategy optimization, or execution tools, this project provides a variety of solutions to help you make informed trading decisions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChipaDevTeam/BinaryOptionsTools
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas

[options.packages.find]
where = BinaryOptionsTools
